// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroHead component test should render without crash with props 1`] = `
<div
  className="hero-head heroHead CLass"
/>
`;

exports[`HeroHead component test should render without crash without props 1`] = `
<div
  className="hero-head "
/>
`;
